--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "photoswipe",
-  "version": "4.1.3",
+  "name": "photoswipe-gia",
+  "version": "4.1.13",
   "engines": {
     "node": ">= 0.8.0"
   },
